fix: ASWintroduction now is readable on mobile and displays in the center of the screen - testing required for background image on different sizes

--- a/src/app/(site)/css/homepageLayout.css
+++ b/src/app/(site)/css/homepageLayout.css
@@ -208,11 +208,20 @@
 
 @media only screen and (max-width: 768px) {
     .ASWIntroduction {
-        background-image: linear-gradient(#f5eadfcc, #f5eadfcc), url('../assets/photos/background.jpg');
-        background-size: cover;
-        background-position: center;
-        background-repeat: no-repeat;
-        width: 100vw;
-        height: 100vh;
+        display: block;
+        padding-top: 20%;
+    }
+
+    .ASWLogo {
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .ASWIntroductionContent {
+        padding-top: 10%;
+        padding-left: 5%;
+        padding-right: 5%;
+        margin-left: auto;
+        margin-right: auto;
     }
 }
